--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestTaskForWork</string>
+    <string name="btn_add_contact">Add</string>
+    <string name="txt_contact_enter_name">Enter name</string>
+    <string name="pop_up_contact_dialog_remove">Remove</string>
 </resources>
